--- a/fastAI-NLP-lesson-02.ipynb
+++ b/fastAI-NLP-lesson-02.ipynb
@@ -203,7 +203,11 @@
       "metadata": {
         "id": "GIR9lowb5OSh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "79e74ce2-b988-48bc-a59f-aedcd29b4c5b"
       },
       "source": [
         "categories = ['alt.atheism', 'talk.religion.misc', 'comp.graphics', 'sci.space']\n",
@@ -211,21 +215,33 @@
         "newsgroups_train = fetch_20newsgroups(subset='train', categories=categories, remove=remove)\n",
         "newsgroups_test = fetch_20newsgroups(subset='test', categories=categories, remove=remove)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading 20news dataset. This may take a few minutes.\n",
+            "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "02UmiqYL5OSm",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "be86745d-5695-4b2a-bcda-eeafc127569f"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0eaa24ff-c39a-4a8b-f348-74e22e7d9be9"
       },
       "source": [
         "newsgroups_train.filenames.shape, newsgroups_train.target.shape"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +253,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 141
+          "execution_count": 5
         }
       ]
     },
@@ -256,13 +272,16 @@
       "metadata": {
         "id": "0ah-UjJ_5OSs",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "047f7418-0fa4-40ae-cc69-0126ea9f9187"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 612
+        },
+        "outputId": "c58ae844-62cc-4376-d82c-de7df6035c59"
       },
       "source": [
         "print(\"\\n\".join(newsgroups_train.data[:3]))"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,13 +341,16 @@
       "metadata": {
         "id": "8b18mxbN5OSx",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "53ffed53-336b-466c-aa6e-2cbd212fdfb7"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8f3a5b5b-9fef-4eac-80a1-e94b3aea759b"
       },
       "source": [
         "np.array(newsgroups_train.target_names)[newsgroups_train.target[:3]]"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -340,7 +362,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 7
         }
       ]
     },
@@ -359,13 +381,16 @@
       "metadata": {
         "id": "qzeWvfou5OS4",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "e31db049-7be9-4afd-bc91-79fc8d2f5241"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cba37252-b506-4184-dc84-143b23d58925"
       },
       "source": [
         "newsgroups_train.target[:10]"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +402,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 8
         }
       ]
     },
@@ -443,16 +468,27 @@
       "metadata": {
         "id": "MHyvISpN5OTD",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "0c672975-7c00-41b7-de1b-c534fb732507"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 411
+        },
+        "outputId": "6179d9e6-9ea0-4cc0-ebbf-8d651378b870"
       },
       "source": [
         "from sklearn.feature_extraction import stop_words\n",
         "\n",
         "sorted(list(stop_words.ENGLISH_STOP_WORDS))[:20]"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/utils/deprecation.py:144: FutureWarning: The sklearn.feature_extraction.stop_words module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.feature_extraction.text. Anything that cannot be imported from sklearn.feature_extraction.text is now part of the private API.\n",
+            "  warnings.warn(message, FutureWarning)\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -482,7 +518,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 10
         }
       ]
     },
@@ -541,23 +577,25 @@
       "metadata": {
         "id": "iDKp89dd5OTO",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "b2261e93-200c-491a-cc2a-8b061b4a700c"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "a114f265-5864-418d-ce4b-31de2754c8fd"
       },
       "source": [
         "import nltk\n",
         "nltk.download('wordnet')"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[nltk_data] Downloading package wordnet to\n",
-            "[nltk_data]     /home/racheltho/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n"
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
           ],
-          "name": "stderr"
+          "name": "stdout"
         },
         {
           "output_type": "execute_result",
@@ -569,7 +607,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 142
+          "execution_count": 11
         }
       ]
     },
@@ -618,13 +656,16 @@
       "metadata": {
         "id": "WXXMkvz85OTf",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "81ceb43f-1293-4073-92e5-e27b803cd839"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2b7c1a58-2a78-4052-dbfa-e4f68bd87c14"
       },
       "source": [
         "[wnl.lemmatize(word) for word in word_list]"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +677,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 146
+          "execution_count": 15
         }
       ]
     },
@@ -645,13 +686,16 @@
       "metadata": {
         "id": "sw1zvoxn5OTj",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "004cbe24-2132-492d-cdef-36bc16f0c566"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b575b9b8-5f96-43a9-9682-daac57f518fd"
       },
       "source": [
         "[porter.stem(word) for word in word_list]"
       ],
-      "execution_count": 0,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -663,7 +707,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 147
+          "execution_count": 16
         }
       ]
     },
@@ -679,6 +723,85 @@
         "- fly, flies, flying\n",
         "- organize, organizes, organizing\n",
         "- universe, university"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e4BN2GHaCcNv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "word_list_1 = ['fly', 'flies', 'flying']\n",
+        "word_list_2= ['organize', 'organizes', 'organizing']\n",
+        "word_list_3= ['universe', 'university']"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5yH7-C3PC2hW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b8bd5295-4426-4daf-adbc-df5e326ef3d9"
+      },
+      "source": [
+        "[wnl.lemmatize(word) for word in word_list_1]\n",
+        "[wnl.lemmatize(word) for word in word_list_2]\n",
+        "[wnl.lemmatize(word) for word in word_list_3]"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['universe', 'university']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DGrNzn2RDEHy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "37c58082-63f4-4c99-cd68-dd262262b4e2"
+      },
+      "source": [
+        "[porter.stem(word) for word in word_list_1]\n",
+        "[porter.stem(word) for word in word_list_2]\n",
+        "[porter.stem(word) for word in word_list_3]"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['univers', 'univers']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
       ]
     },
     {
