--- a/fastAI-NLP-lesson-02.ipynb
+++ b/fastAI-NLP-lesson-02.ipynb
@@ -32,7 +32,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# Topic Modeling with NMF and SVD"
+        "# Topic Modeling with NMF and SVD\n",
+        "[Source](https://github.com/fastai/course-nlp/blob/master/2-svd-nmf-topic-modeling.ipynb)"
       ]
     },
     {
@@ -203,11 +204,11 @@
       "metadata": {
         "id": "GIR9lowb5OSh",
         "colab_type": "code",
+        "outputId": "79e74ce2-b988-48bc-a59f-aedcd29b4c5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "79e74ce2-b988-48bc-a59f-aedcd29b4c5b"
+        }
       },
       "source": [
         "categories = ['alt.atheism', 'talk.religion.misc', 'comp.graphics', 'sci.space']\n",
@@ -215,7 +216,7 @@
         "newsgroups_train = fetch_20newsgroups(subset='train', categories=categories, remove=remove)\n",
         "newsgroups_test = fetch_20newsgroups(subset='test', categories=categories, remove=remove)"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,16 +233,16 @@
       "metadata": {
         "id": "02UmiqYL5OSm",
         "colab_type": "code",
+        "outputId": "0eaa24ff-c39a-4a8b-f348-74e22e7d9be9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0eaa24ff-c39a-4a8b-f348-74e22e7d9be9"
+        }
       },
       "source": [
         "newsgroups_train.filenames.shape, newsgroups_train.target.shape"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -272,16 +273,16 @@
       "metadata": {
         "id": "0ah-UjJ_5OSs",
         "colab_type": "code",
+        "outputId": "c58ae844-62cc-4376-d82c-de7df6035c59",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 612
-        },
-        "outputId": "c58ae844-62cc-4376-d82c-de7df6035c59"
+        }
       },
       "source": [
         "print(\"\\n\".join(newsgroups_train.data[:3]))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,16 +342,16 @@
       "metadata": {
         "id": "8b18mxbN5OSx",
         "colab_type": "code",
+        "outputId": "8f3a5b5b-9fef-4eac-80a1-e94b3aea759b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8f3a5b5b-9fef-4eac-80a1-e94b3aea759b"
+        }
       },
       "source": [
         "np.array(newsgroups_train.target_names)[newsgroups_train.target[:3]]"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,16 +382,16 @@
       "metadata": {
         "id": "qzeWvfou5OS4",
         "colab_type": "code",
+        "outputId": "cba37252-b506-4184-dc84-143b23d58925",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cba37252-b506-4184-dc84-143b23d58925"
+        }
       },
       "source": [
         "newsgroups_train.target[:10]"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,18 +469,18 @@
       "metadata": {
         "id": "MHyvISpN5OTD",
         "colab_type": "code",
+        "outputId": "6179d9e6-9ea0-4cc0-ebbf-8d651378b870",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 411
-        },
-        "outputId": "6179d9e6-9ea0-4cc0-ebbf-8d651378b870"
+        }
       },
       "source": [
         "from sklearn.feature_extraction import stop_words\n",
         "\n",
         "sorted(list(stop_words.ENGLISH_STOP_WORDS))[:20]"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,17 +578,17 @@
       "metadata": {
         "id": "iDKp89dd5OTO",
         "colab_type": "code",
+        "outputId": "a114f265-5864-418d-ce4b-31de2754c8fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "a114f265-5864-418d-ce4b-31de2754c8fd"
+        }
       },
       "source": [
         "import nltk\n",
         "nltk.download('wordnet')"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,16 +657,16 @@
       "metadata": {
         "id": "WXXMkvz85OTf",
         "colab_type": "code",
+        "outputId": "2b7c1a58-2a78-4052-dbfa-e4f68bd87c14",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2b7c1a58-2a78-4052-dbfa-e4f68bd87c14"
+        }
       },
       "source": [
         "[wnl.lemmatize(word) for word in word_list]"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -686,16 +687,16 @@
       "metadata": {
         "id": "sw1zvoxn5OTj",
         "colab_type": "code",
+        "outputId": "b575b9b8-5f96-43a9-9682-daac57f518fd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b575b9b8-5f96-43a9-9682-daac57f518fd"
+        }
       },
       "source": [
         "[porter.stem(word) for word in word_list]"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,18 +746,18 @@
       "metadata": {
         "id": "5yH7-C3PC2hW",
         "colab_type": "code",
+        "outputId": "b8bd5295-4426-4daf-adbc-df5e326ef3d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b8bd5295-4426-4daf-adbc-df5e326ef3d9"
+        }
       },
       "source": [
         "[wnl.lemmatize(word) for word in word_list_1]\n",
         "[wnl.lemmatize(word) for word in word_list_2]\n",
         "[wnl.lemmatize(word) for word in word_list_3]"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -777,18 +778,18 @@
       "metadata": {
         "id": "DGrNzn2RDEHy",
         "colab_type": "code",
+        "outputId": "37c58082-63f4-4c99-cd68-dd262262b4e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "37c58082-63f4-4c99-cd68-dd262262b4e2"
+        }
       },
       "source": [
         "[porter.stem(word) for word in word_list_1]\n",
         "[porter.stem(word) for word in word_list_2]\n",
         "[porter.stem(word) for word in word_list_3]"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -902,8 +903,8 @@
       "metadata": {
         "id": "MAifw4cA5OT1",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "b03ef2c0-e70b-4134-878a-de3ab14d5df9"
+        "outputId": "b03ef2c0-e70b-4134-878a-de3ab14d5df9",
+        "colab": {}
       },
       "source": [
         "[lemmatizer.lookup(word) for word in word_list]"
@@ -962,8 +963,8 @@
       "metadata": {
         "id": "OWIdtiop5OT-",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "b3759306-531d-4f02-8173-4bd9354c535b"
+        "outputId": "b3759306-531d-4f02-8173-4bd9354c535b",
+        "colab": {}
       },
       "source": [
         "sorted(list(nlp.Defaults.stop_words))[:20]"
@@ -1018,8 +1019,8 @@
       "metadata": {
         "id": "CpXLjPhI5OUC",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "04055ad0-7e21-43e4-e618-363dfa54bb2e"
+        "outputId": "04055ad0-7e21-43e4-e618-363dfa54bb2e",
+        "colab": {}
       },
       "source": [
         "#Exercise:\n"
@@ -1070,8 +1071,8 @@
         "hidden": true,
         "id": "se0CsFMh5OUI",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "d3cab497-853e-4c4a-a80b-cb19f500fb52"
+        "outputId": "d3cab497-853e-4c4a-a80b-cb19f500fb52",
+        "colab": {}
       },
       "source": [
         "#Exercise:\n"
@@ -1259,8 +1260,8 @@
       "metadata": {
         "id": "jVesRpO85OUo",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "594feba1-6991-454d-f75c-acadf9e36921"
+        "outputId": "594feba1-6991-454d-f75c-acadf9e36921",
+        "colab": {}
       },
       "source": [
         "vectors = vectorizer.fit_transform(newsgroups_train.data).todense() # (documents, vocab)\n",
@@ -1288,8 +1289,8 @@
         "scrolled": true,
         "id": "jyJXjK6e5OUu",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f35aac88-3773-4e55-e152-e900daded6f9"
+        "outputId": "f35aac88-3773-4e55-e152-e900daded6f9",
+        "colab": {}
       },
       "source": [
         "print(len(newsgroups_train.data), vectors.shape)"
@@ -1323,8 +1324,8 @@
       "metadata": {
         "id": "ABWLzpCL5OU-",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "7df0e960-82ed-4029-b694-69e918036789"
+        "outputId": "7df0e960-82ed-4029-b694-69e918036789",
+        "colab": {}
       },
       "source": [
         "vocab.shape"
@@ -1350,8 +1351,8 @@
       "metadata": {
         "id": "pB9oX_Wa5OVS",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a9126b48-f2fc-4564-f949-4a7ea4494ce6"
+        "outputId": "a9126b48-f2fc-4564-f949-4a7ea4494ce6",
+        "colab": {}
       },
       "source": [
         "vocab[7000:7020]"
@@ -1433,8 +1434,8 @@
       "metadata": {
         "id": "dwNzMKZN5OVk",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "220a5316-350d-49bb-dd9e-422b2d73a572"
+        "outputId": "220a5316-350d-49bb-dd9e-422b2d73a572",
+        "colab": {}
       },
       "source": [
         "%time U, s, Vh = linalg.svd(vectors, full_matrices=False)"
@@ -1456,8 +1457,8 @@
       "metadata": {
         "id": "Hk352hk25OVz",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f27c34ae-299e-499f-cfe7-6da48d2daa9d"
+        "outputId": "f27c34ae-299e-499f-cfe7-6da48d2daa9d",
+        "colab": {}
       },
       "source": [
         "print(U.shape, s.shape, Vh.shape)"
@@ -1488,8 +1489,8 @@
       "metadata": {
         "id": "qFkRFXsy5OV_",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a735bc92-915b-4204-a1f7-2ee2d6d31491"
+        "outputId": "a735bc92-915b-4204-a1f7-2ee2d6d31491",
+        "colab": {}
       },
       "source": [
         "s[:4]"
@@ -1515,8 +1516,8 @@
       "metadata": {
         "id": "uadoqFo15OWC",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "c7c8639b-a1c4-4822-faf1-6e8763f1734e"
+        "outputId": "c7c8639b-a1c4-4822-faf1-6e8763f1734e",
+        "colab": {}
       },
       "source": [
         "np.diag(np.diag(s[:4]))"
@@ -1552,8 +1553,8 @@
       "metadata": {
         "id": "D7pVhYIg5OWZ",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "97e8fb1c-378c-4040-ffd9-111790d12938"
+        "outputId": "97e8fb1c-378c-4040-ffd9-111790d12938",
+        "colab": {}
       },
       "source": [
         "#Exercise: confrim that U, s, Vh is a decomposition of `vectors`\n"
@@ -1601,8 +1602,8 @@
         "hidden": true,
         "id": "1sCPgwq05OWo",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "932522e0-9ddb-4ba2-f34a-e2947aaf8dd5"
+        "outputId": "932522e0-9ddb-4ba2-f34a-e2947aaf8dd5",
+        "colab": {}
       },
       "source": [
         "#Exercise: Confirm that U, Vh are orthonormal\n"
@@ -1651,8 +1652,8 @@
         "hidden": true,
         "id": "FS8z2rtp5OWz",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3021881c-bd08-489a-8011-533582c81d7e"
+        "outputId": "3021881c-bd08-489a-8011-533582c81d7e",
+        "colab": {}
       },
       "source": [
         "plt.plot(s);"
@@ -1680,8 +1681,8 @@
         "hidden": true,
         "id": "i8L05opQ5OW9",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "a2749b76-6619-4dfd-bf58-8dd027527b65"
+        "outputId": "a2749b76-6619-4dfd-bf58-8dd027527b65",
+        "colab": {}
       },
       "source": [
         "plt.plot(s[:10])"
@@ -1740,8 +1741,8 @@
         "hidden": true,
         "id": "nsk-w8wi5OXG",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "d20a95df-f700-4c80-ae75-e2648a5c265a"
+        "outputId": "d20a95df-f700-4c80-ae75-e2648a5c265a",
+        "colab": {}
       },
       "source": [
         "show_topics(Vh[:10])"
@@ -1953,8 +1954,8 @@
       "metadata": {
         "id": "O1IpPFf05OX5",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "6fe06e7d-e075-48e2-a25f-ca2f2c31e608"
+        "outputId": "6fe06e7d-e075-48e2-a25f-ca2f2c31e608",
+        "colab": {}
       },
       "source": [
         "show_topics(H1)"
@@ -2022,8 +2023,8 @@
       "metadata": {
         "id": "N7c_YhOz5OYN",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "acd236b2-050c-4d64-c89e-0664a6f3ed7f"
+        "outputId": "acd236b2-050c-4d64-c89e-0664a6f3ed7f",
+        "colab": {}
       },
       "source": [
         "newsgroups_train.data[10:20]"
@@ -2072,8 +2073,8 @@
       "metadata": {
         "id": "0IKybxCa5OYe",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3917aaf3-c427-4154-dc02-ff89a8268d2e"
+        "outputId": "3917aaf3-c427-4154-dc02-ff89a8268d2e",
+        "colab": {}
       },
       "source": [
         "show_topics(H1)"
@@ -2103,8 +2104,8 @@
       "metadata": {
         "id": "skn9hzux5OYk",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "9f765285-f5f4-49fb-8380-d493d333012a"
+        "outputId": "9f765285-f5f4-49fb-8380-d493d333012a",
+        "colab": {}
       },
       "source": [
         "plt.plot(clf.components_[0])"
@@ -2143,8 +2144,8 @@
       "metadata": {
         "id": "_xcAg3Lh5OYo",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f516328b-e8ae-4748-88d6-0d45a2d34b60"
+        "outputId": "f516328b-e8ae-4748-88d6-0d45a2d34b60",
+        "colab": {}
       },
       "source": [
         "clf.reconstruction_err_"
@@ -2295,8 +2296,8 @@
       "metadata": {
         "id": "8ViTIYRM5OYz",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "551b37dc-d48c-4890-808a-a19036c89fac"
+        "outputId": "551b37dc-d48c-4890-808a-a19036c89fac",
+        "colab": {}
       },
       "source": [
         "%time u, s, v = np.linalg.svd(vectors, full_matrices=False)"
@@ -2332,8 +2333,8 @@
       "metadata": {
         "id": "m1-b4O2x5OY7",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f032361a-fc00-4b9a-bae5-e54ae673419c"
+        "outputId": "f032361a-fc00-4b9a-bae5-e54ae673419c",
+        "colab": {}
       },
       "source": [
         "%time u, s, v = decomposition.randomized_svd(vectors, 10)"
@@ -2365,8 +2366,8 @@
       "metadata": {
         "id": "o-ADlA_I5OY-",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "567b4886-a064-48ee-eb54-fc21a2908a37"
+        "outputId": "567b4886-a064-48ee-eb54-fc21a2908a37",
+        "colab": {}
       },
       "source": [
         "%time u, s, v = fbpca.pca(vectors, 10)"
